--- a/public/V2/Farmers/Farmers.html
+++ b/public/V2/Farmers/Farmers.html
@@ -76,6 +76,13 @@
                                 Insert Footer
                             </a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
@@ -105,18 +112,18 @@
             </div>
         </div>
 
-      
+
 
     </header>
     <main>
         <section class="py-5 mt-5">
             <div class="container">
                 <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                   
-            </nav>
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                        <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+
+                </nav>
                 <div class="row justify-content-center g-5">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
