--- a/public/V2/Farmers/alter.html
+++ b/public/V2/Farmers/alter.html
@@ -66,7 +66,8 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
@@ -77,6 +78,15 @@
                                 Insert Footer
                             </a>
                         </li>
+
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
