--- a/public/V2/Farmers/create.html
+++ b/public/V2/Farmers/create.html
@@ -80,6 +80,15 @@
                             </a>
                         </li>
 
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
+
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
