--- a/public/V2/Farmers/crud.html
+++ b/public/V2/Farmers/crud.html
@@ -68,7 +68,8 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
@@ -81,6 +82,15 @@
                             </a>
                         </li>
 
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
+
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
@@ -90,8 +100,9 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square  text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
-                               Alter
+                                <i class="bi bi-pencil-square  text-warning d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
+                                Alter
                             </a>
                         </li>
 
@@ -106,7 +117,7 @@
             </div>
         </div>
 
-      
+
     </header>
     <main class="content">
         <div id="toolbar" class="">
