--- a/public/V2/Farmers/tFInTH.html
+++ b/public/V2/Farmers/tFInTH.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,6 +50,7 @@
                         <span class="fs-4">KeshavSoft</span>
                     </a>
 
+
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
@@ -73,12 +74,14 @@
                             </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert Footer
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./crud.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
+                                Insert_F
                             </a>
                         </li>
+
                         <li class="nav-item active">
                             <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
                                 href="./tFInTH.html">
@@ -96,30 +99,27 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square  text-warning d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
 
-                        <li class="nav-item active">
-                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
-                                href="./delete.html">
-                                <i class="bi bi-trash-fill text-danger d-block mb-1 fs-4"></i>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./Delete.html">
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
+
                     </ul>
+
                 </div>
             </div>
         </div>
 
 
-
-
-
     </header>
-    <main>
+    <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
                 class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
@@ -135,22 +135,99 @@
         </div>
         <div class="container">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
+                <ol class="breadcrumb mt-4">
                     <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
                     <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Delete</a></li>
+                    <li class="breadcrumb-item"><a href="#">Insert Header</a></li>
             </nav>
-            <div class="card mt-5">
+            <div class="card mt-4">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table id="table" class="table table-bordered table-striped">
+                        <table id="table" class="table" data-show-footer="true">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        #
+                                    </th>
+                                    <th>
+                                        FarmerName
+                                    </th>
+                                    <th>
+                                        FarmerMobile
+                                    </th>
+
+                                    <th>
+                                        FarmerCity
+                                    </th>
+                                    <th>
+                                        FarmerField
+                                    </th>
+
+                                </tr>
+                                <tr>
+                                    <th></th>
+                                    <th>
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" id="TableFooterItemNameInputId"
+                                                autocomplete="off" placeholder="Enter FarmerName" required>
+                                            <div class="invalid-feedback">
+                                                Please provide correct Name.
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <div class="input-group">
+                                            <input name="Mobile" id="TableFooterItemCategoryInputId" type="number"
+                                                placeholder="Enter FarmerCity" class="form-control" autocomplete="off"
+                                                id="TableFooterItemCategoryInputId"
+                                                list="TableFooterItemCategoryInputId" required
+                                                oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10)">
+                                            <datalist id="TableFooterItemCategoryInputId">
+                                                <div class="invalid-feedback">
+                                                    Please provide correct Mobile.
+                                                </div>
+                                        </div>
+                                    </th>
+
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterItemGroupInputId" type="text"
+                                                placeholder="Enter FarmerCity">
+                                            <div class="invalid-feedback">
+                                                Please provide correct City.
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterFarmerFieldInputId" type="text"
+                                                placeholder="Enter FarmerField">
+                                            <div class="invalid-feedback">
+                                                Please provide correct Field.
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th class="text-start">
+                                        <button class="btn btn-outline-success" type="button"
+                                            id="TableFooterSaveButtonId">
+                                            Save
+                                        </button>
+                                    </th>
+                                </tr>
+                                <tr id="tableHeadRow">
+                                    <th data-formatter="jFLocalSerialColumn"></th>
+                                    <th data-field="FARMERNAME"></th>
+                                    <th data-field="FARMERMOBILE"></th>
+                                    <th data-field="FARMERCITY"></th>
+                                    <th data-field="FARMERFIELD"></th>
+                                </tr>
+                            </thead>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
         <div class="container py-4 d-flex flex-wrap justify-content-between align-items-center">
             <div class="col-md-4 d-flex align-items-center mb-3 mb-md-0">
@@ -175,8 +252,6 @@
             </ul>
         </div>
     </footer>
-
-    <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js "
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r "
         crossorigin="anonymous "></script>
@@ -190,7 +265,12 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.6/dist/bootstrap-table.min.js"></script>
 
-    <script type="module" src="./Js/Delete/entryFile.js"></script>
+    <script>
+        function jFLocalSerialColumn(value, row, index) {
+            return index + 1;
+        };
+    </script>
+    <script type="module" src="./Js/TFInTH/entryFile.js"></script>
 </body>
 
 </html>
