--- a/public/V2/Farmers/update.html
+++ b/public/V2/Farmers/update.html
@@ -87,6 +87,13 @@
                                 Insert Footer
                             </a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
 
                         <!-- Show -->
                         <li class="nav-item">
