--- a/public/V2/Sales/Sales.html
+++ b/public/V2/Sales/Sales.html
@@ -49,40 +49,49 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <!-- Home -->
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
-                                <i class="bi bi-arrow-90deg-left d-block mb-1"
-                                    style="font-size: 1.5rem; "></i>
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem; "></i>
                                 <span>Parent</span>
                             </a>
                         </li>
 
 
+                        <a class="nav-link text-white text-center" href="./Create.html">
+                            <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                            Insert
+                        </a>
+                        </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                            <a class="nav-link text-white text-center" href="./crud.html">
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert Footer
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Alter.html">
                                 <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -96,6 +105,13 @@
 
     </header>
     <main>
+        <div class="container">
+                <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Sales</a></li>
+                   
+            </nav>
         <section class="py-5 mt-5">
             <div class="container">
                 <div class="row justify-content-center g-5">
@@ -113,11 +129,20 @@
                                     <ul class="dropdown-menu w-75 shadow-sm start-0">
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="create.html">
-                                                <i class="bi bi-pencil-square text-primary me-3 fs-5"></i>
-                                                <span>Create</span>
+                                                <i class="bi bi-plus-circle-fill text-primary me-3 fs-5"></i>
+                                                <span>Insert</span>
                                             </a>
                                         </li>
                                         <li>
+
+                                        <li>
+                                            <a class="dropdown-item d-flex align-items-center" href="crud.html">
+                                                <i class="bi bi-building-add text-info me-3 fs-5"></i>
+                                                <span>Insert Footer</span>
+                                            </a>
+                                        </li>
+                                        <li>
+
                                             <a class="dropdown-item d-flex align-items-center" href="./show.html">
                                                 <i class="bi bi-eye text-success me-3 fs-5"></i>
                                                 <span>Show</span>
@@ -131,7 +156,7 @@
                                         </li>
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="./delete.html">
-                                                <i class="bi bi-x-circle-fill text-danger me-3 fs-5"></i>
+                                                <i class="bi bi-trash-fill text-danger me-3 fs-5"></i>
                                                 <span>Delete</span>
                                             </a>
                                         </li>
