--- a/public/V2/Sales/create.html
+++ b/public/V2/Sales/create.html
@@ -50,13 +50,13 @@
                 </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                        <!-- Home -->
+
                         <li>
-                            <a href="../index.html" class="nav-link text-white text-center">
+                            <a href="../Sales/Sales.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
@@ -64,32 +64,44 @@
                             </a>
                         </li>
 
+                        <li class="nav-item active">
+                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                                href="./create.html">
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1 fs-4"></i>
+                                Insert
+                            </a>
+                        </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                            <a class="nav-link text-white text-center" href="./crud.html">
+                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert Footer
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Alter.html">
-                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
+                            <a class="nav-link text-white text-center" href="./alter.html">
+                                <i class="bi bi-pencil-square l text-warning d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Alter
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./Delete.html">
-                                <i class="bi bi-x-circle-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
-
                     </ul>
+
 
 
                 </div>
@@ -98,6 +110,14 @@
 
     </header>
     <main>
+
+         <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
+                    <li class="breadcrumb-item"><a href="#">Sales</a></li>
+                    <li class="breadcrumb-item"><a href="#">Insert <Footer></Footer></a></li>
+            </nav>
 
         <div class="container mt-5">
             <div class="card">
